--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "" # the subpath of your site, e.g. /blog
-title: "" # the name of your site, e.g. ACME Corp.
+url: "https://milliesncl.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "edit-agency" # the subpath of your site, e.g. /blog
+title: "edit. agency" # the name of your site, e.g. ACME Corp.
 
 plugins:
   - jekyll-postcss
