--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -17,10 +17,9 @@ ssh:
 # Enable SSL auto certification via Let's Encrypt (and allow for multiple apps on one server).
 # Set ssl: false if using something like Cloudflare to terminate SSL (but keep host!).
 proxy:
-#   ssl: true
-#   hosts:
-#     - edit-agency.fr
-#     - www.edit-agency.fr
+  ssl: true
+  hosts:
+    - editagencyparis.com
   healthcheck:
     path: /
     interval: 3
